added txt file data parsing

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                             </a>
                             <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                                 <button class="dropdown-item" id="open-file-btn">
-                                    <input id="file-input" type="file" style="display: none;" />Открыть
+                                    <input id="file-input" accept=".txt" type="file" style="display: none;" />Открыть
                                 </button>
                                  <button class="btn dropdown-item" href="#" style="white-space:normal;">Сохранить</button>
                             </div>
@@ -111,7 +111,9 @@
     <article class='containet-fluid' style="width: 100%; height: 100%;">
 
     </article>
-    <script src="script.js"></script>
+    <script src="main.js"></script>]
+    <script src="Signal.js"></script>]
+    <script src="Channel.js"></script>]
 </body>
 
 </html>
