started using OOP to present data and added side-bar

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
                                 <button class="dropdown-item" id="open-file-btn">
                                     <input id="file-input" accept=".txt" type="file" style="display: none;" />Открыть
                                 </button>
-                                 <button class="btn dropdown-item" href="#" style="white-space:normal;">Сохранить</button>
+                                <button class="btn dropdown-item" href="#"
+                                    style="white-space:normal;">Сохранить</button>
                             </div>
                         </div>
                     </div>
@@ -45,8 +46,10 @@
                                 Моделирование
                             </a>
                             <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                 <button class="btn dropdown-item" href="#" style="white-space:normal;">Детерминированных сигналов</button>
-                                 <button class="btn dropdown-item" href="#" style="white-space:normal;">Случайных сигналов</button>
+                                <button class="btn dropdown-item" href="#" style="white-space:normal;">Детерминированных
+                                    сигналов</button>
+                                <button class="btn dropdown-item" href="#" style="white-space:normal;">Случайных
+                                    сигналов</button>
                             </div>
                         </div>
                     </div>
@@ -57,10 +60,14 @@
                                 Фильтрация
                             </a>
                             <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                 <button class="btn dropdown-item" href="#" style="white-space:normal;">Удаление артефактов</button>
-                                 <button class="btn dropdown-item" href="#" style="white-space:normal;">Выделение полиномиальных трендов</button>
-                                 <button class="btn dropdown-item" href="#" style="white-space:normal;">Линейную фильтрацию сигналов с заданной конечной импульсной характеристикой</button>
-                                 <button class="btn dropdown-item" href="#" style="white-space:normal;">Линейную фильтрацию сигналов с заданной частотной характеристикой</button>
+                                <button class="btn dropdown-item" href="#" style="white-space:normal;">Удаление
+                                    артефактов</button>
+                                <button class="btn dropdown-item" href="#" style="white-space:normal;">Выделение
+                                    полиномиальных трендов</button>
+                                <button class="btn dropdown-item" href="#" style="white-space:normal;">Линейную
+                                    фильтрацию сигналов с заданной конечной импульсной характеристикой</button>
+                                <button class="btn dropdown-item" href="#" style="white-space:normal;">Линейную
+                                    фильтрацию сигналов с заданной частотной характеристикой</button>
                             </div>
                         </div>
                     </div>
@@ -71,11 +78,17 @@
                                 Анализ
                             </a>
                             <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                 <button class="btn dropdown-item" href="#" style="white-space:normal;">Частотный</button>
-                                 <button class="btn dropdown-item" href="#" style="white-space:normal;">Взаимный корреляционный произвольных пар сигналов</button>
-                                 <button class="btn dropdown-item" href="#" style="white-space:normal;">Взаимный спектральный произвольных пар сигналов</button>
-                                <button class="btn dropdown-item" href="#" style="white-space:normal;">Частотно-временной анализ сигналов с использованием Фурье-спектрограмм</button>
-                                 <button class="btn dropdown-item" href="#" style="white-space:normal;">Вейвлетограммы</button>
+                                <button class="btn dropdown-item" href="#"
+                                    style="white-space:normal;">Частотный</button>
+                                <button class="btn dropdown-item" href="#" style="white-space:normal;">Взаимный
+                                    корреляционный произвольных пар сигналов</button>
+                                <button class="btn dropdown-item" href="#" style="white-space:normal;">Взаимный
+                                    спектральный произвольных пар сигналов</button>
+                                <button class="btn dropdown-item" href="#"
+                                    style="white-space:normal;">Частотно-временной анализ сигналов с использованием
+                                    Фурье-спектрограмм</button>
+                                <button class="btn dropdown-item" href="#"
+                                    style="white-space:normal;">Вейвлетограммы</button>
                             </div>
                         </div>
                     </div>
@@ -108,12 +121,16 @@
             </div>
         </nav>
     </header>
+    
+    <ul id="signal-navigation-menu">
+        
+    </ul>
     <article class='containet-fluid' style="width: 100%; height: 100%;">
 
     </article>
-    <script src="main.js"></script>]
-    <script src="Signal.js"></script>]
-    <script src="Channel.js"></script>]
+    <script src="js/main.js"></script>]
+    <script src="js/Signal.js"></script>]
+    <script src="js/Channel.js"></script>]
 </body>
 
 </html>
