fixed date bugs

--- a/index.html
+++ b/index.html
@@ -147,9 +147,7 @@
             </div>
         </div>
     </article>
-    <script src="js/main.js"></script>]
-    <script src="js/Signal.js"></script>]
-    <script src="js/Channel.js"></script>]
+    <script type="module" src="js/main.js"></script>
 </body>
 
 </html>
