--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <ul id="signal-navigation-menu">
 
     </ul>
-    <article class='containet-fluid' style="width: 100%; height: 100%;">
+    <article class='containet-fluid'>
 
         
         <!-- Modal -->
