--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-info ">
+        <nav class="navbar navbar-expand-lg navbar-light bg-info mb-2">
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <div class="d-flex container-fluid justify-content-around navbar-nav mr-auto">
                     <div class="nav-item active">
@@ -123,10 +123,8 @@
     <ul id="signal-navigation-menu">
 
     </ul>
-    <article class='containet-fluid'>
 
-        
-        <!-- Modal -->
+    <article class="d-flex justify-content-around containet-fluid">
         <div class="modal fade" id="signal-info-modal" tabindex="-1" role="dialog"
             aria-labelledby="exampleModalScrollableTitle" aria-hidden="true">
             <div class="modal-dialog modal-dialog-scrollable" role="document">
