divided code to separated files

--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
                                 Справка
                             </a>
                             <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                <a class="dropdown-item" href="#" onclick="showAboutProgramInfo()">О программе</a>
-                                <a class="dropdown-item" href="#" onclick="showAboutAuthorInfo()">Автор</a>
+                                <a class="dropdown-item" href="#" id="about-btn">О программе</a>
+                                <a class="dropdown-item" href="#" id="author-btn">Автор</a>
                             </div>
                         </div>
                     </div>
