--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
         </div>
     </article>
     <script type="module" src="js/main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
