updated signal navigation menu

--- a/index.html
+++ b/index.html
@@ -113,7 +113,10 @@
         </nav>
     </header>
 
-    <ul id="signal-navigation-menu"></ul>
+    <div class="signal-navigation-menu-container">
+        <div id="show-signal-navigation-menu-btn"> &#60 </div>
+        <ul id="signal-navigation-menu"></ul>
+    </div>
 
     <article class="d-flex justify-content-around containet-fluid">
         <div class="modal fade" id="signal-info-modal" tabindex="-1" role="dialog"
