--- a/index.html
+++ b/index.html
@@ -115,7 +115,12 @@
 
     <div class="signal-navigation-menu-container">
         <div id="show-signal-navigation-menu-btn"> &#60 </div>
-        <ul id="signal-navigation-menu"></ul>
+        <ul id="signal-navigation-menu">
+        </ul>
+        <button type="button" class="container-fluid btn btn-info" id="return-btn" aria-haspopup="true"
+            aria-expanded="false">
+            Вернуться в меню сигналов
+        </button>
     </div>
 
     <article class="d-flex justify-content-around containet-fluid">
