--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 								<button class="dropdown-item" id="open-file-btn">
 									<input id="file-input" accept=".txt" type="file" style="display: none;" />Открыть
 								</button>
-								<button class="btn dropdown-item" href="#" style="white-space:normal;">Сохранить</button>
+								<button class="btn dropdown-item" href="#"
+									style="white-space:normal;">Сохранить</button>
 							</div>
 						</div>
 					</div>
@@ -38,12 +39,13 @@
 								Моделирование
 							</a>
 							<div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-								<button type="button" id="determ-modelling-btn" class="btn btn-primary" data-toggle="modal"
-									data-target="#determ-modelling-modal">
+								<button type="button" id="determ-modelling-btn" class="btn btn-primary"
+									data-toggle="modal" data-target="#determ-modelling-modal">
 									Детерминированный сигнал
 								</button>
 
-								<button class="btn dropdown-item" href="#" style="white-space:normal; word-wrap: normal">Случайных
+								<button class="btn dropdown-item" href="#"
+									style="white-space:normal; word-wrap: normal">Случайных
 									сигналов</button>
 							</div>
 						</div>
@@ -73,15 +75,18 @@
 								Анализ
 							</a>
 							<div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-								<button class="btn dropdown-item" href="#" style="white-space:normal;">Частотный</button>
+								<button class="btn dropdown-item" href="#"
+									style="white-space:normal;">Частотный</button>
 								<button class="btn dropdown-item" href="#" style="white-space:normal;">Взаимный
 									корреляционный произвольных пар сигналов</button>
 								<button class="btn dropdown-item" href="#" style="white-space:normal;">Взаимный
 									спектральный произвольных пар сигналов</button>
-								<button class="btn dropdown-item" href="#" style="white-space:normal;">Частотно-временной анализ
+								<button class="btn dropdown-item" href="#"
+									style="white-space:normal;">Частотно-временной анализ
 									сигналов с использованием
 									Фурье-спектрограмм</button>
-								<button class="btn dropdown-item" href="#" style="white-space:normal;">Вейвлетограммы</button>
+								<button class="btn dropdown-item" href="#"
+									style="white-space:normal;">Вейвлетограммы</button>
 							</div>
 						</div>
 					</div>
@@ -155,13 +160,15 @@
 								<label for="parameters-container">Укажите параметры</label>
 								<div id="parameters-container">
 									<div class="form-group">
-										<input class="parameter form-control" id="measures-count" placeholder="Количество отсчётов">
+										<input class="parameter form-control" id="measures-count"
+											placeholder="Количество отсчётов">
 									</div>
 									<div class="form-group">
 										<input class="parameter form-control" id="frequency" placeholder="Частота">
 									</div>
 									<div class="form-group">
-										<input class="parameter form-control" id="delay" placeholder="Задержка импульса">
+										<input class="parameter form-control" id="delay"
+											placeholder="Задержка импульса">
 									</div>
 								</div>
 							</div>
@@ -171,7 +178,8 @@
 						<button type="button" class="btn btn-secondary" data-dismiss="modal">
 							Закрыть
 						</button>
-						<button type="button" class="btn btn-primary" data-dismiss="modal" id="create-model-btn">Применить</button>
+						<button type="button" class="btn btn-primary" data-dismiss="modal"
+							id="create-model-btn">Применить</button>
 					</div>
 				</form>
 			</div>
