--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
 		crossorigin="anonymous"></script>
 	<script type="text/javascript" src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
-	<script type="module" src="js/main.js"></script>
+	<script src="js/main.js" type="module"></script>
 </body>
 
 </html>
